
--- 18-September-2022, version 3.6-3

raster no longer uses rgdal

--- 14-August-2022, version 3.5-29

raster no longer uses rgeos

--- 5-October-2021, version 3.5-1

raster now imports terra (instead of the other way around) such that the two packages can be used together; and to allow replacing rgdal and rgeos functionality with functions from terra.

--- 17-July-2020, version 3.3-13

overhaul of crs to be ready for PROJ6
several bug fixes (see https://github.com/rspatial/raster/issues?q=is%3Aissue+)

--- 18-April-2020, version 3.1-5
improvements:

new arguments "smin", "smax" and "samplesize" to "stretch"; and bug fixes. See https://github.com/rspatial/raster/issues/70

layer names in GTiff files are now read from file. Requested by Kyle Taylor
https://github.com/rspatial/raster/issues/88

bug fixes:

parallel version of extract with polygons and "fun" messed up the order of the values (reported by Jacory). https://github.com/rspatial/raster/issues/79

raster::predict bug when using factors (reported by vvirkki). https://github.com/rspatial/raster/issues/73

distanceFromPoints with large files: https://github.com/rspatial/raster/issues/103

colortable lost when cropping RasterBrick: https://github.com/rspatial/raster/issues/105

Error in stack() when providing both bands and varname: https://github.com/rspatial/raster/issues/97

rasterize and multi-polygon containing hole: https://github.com/rspatial/raster/issues/93

Upside down raster: https://github.com/rspatial/raster/issues/95 (a warning is given, not really fixed yet)

Extract to data.frame bug: https://stackoverflow.com/questions/61174280/r-rasterextract-fails-to-create-data-frame

--- 24-September-2019, version 3.0-7
Bug fixes: 
predict with character label factor variables returned NA only https://github.com/rspatial/raster/issues/68

cellFromPolygons now ignores possible incompatible (integer) user-specified default datatype (reported by John Baums, https://github.com/rspatial/raster/issues/69)

