@@ -1,9 +1,9 @@
 Package: raster
 Type: Package
 Title: Geographic Data Analysis and Modeling
-Version: 3.6-30
-Date: 2024-10-02
-Imports: Rcpp, methods, terra (>= 1.7-29)
+Version: 3.6-31
+Date: 2025-01-16
+Imports: Rcpp, methods, terra (>= 1.8-5)
 LinkingTo: Rcpp
 Depends: sp (>= 1.4-5), R (>= 3.5.0)
 Suggests: ncdf4, igraph, tcltk, parallel, rasterVis, MASS, sf, tinytest, gstat, fields, exactextractr
